--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Le Frog</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+      <head>
+          <img srcset="" src="https://images.unsplash.com/photo-1571249104671-f5537fb3e137?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fGF2YXRhcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+          <div class="menu-btn">
+              <span class="menu-btn__burger"></span>
+          </div>
+          <nav class="nav">
+              <ul class="menu-nav">
+                  <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
+                  <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
+                  <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
+                  <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
+                  <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
+              </ul>
+          </nav>
+      </head>
+
+      <main>
+          <h2>Food</h2>
+          <img srcset="" src="https://images.unsplash.com/photo-1500313830540-7b6650a74fd0?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHBhcmlzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+      </main>
+      <p>Amet voluptatum porro placeat voluptates maxime. Quibusdam eius veniam vel illo perspiciatis mollitia Ex ut libero atque distinctio minima ea? Recusandae quia quod obcaecati ad illo dolore tempora id vel. Iure quisquam iure aut provident et sint. Rem officia reiciendis numquam aperiam itaque? Sit autem praesentium repudiandae id maxime dolore, quod, impedit non natus, similique Quasi aperiam tempore excepturi placeat quos Laborum cum non quisquam sapiente nobis Doloribus eius exercitationem placeat iusto iure dolores! Quis impedit laborum asperiores obcaecati libero Placeat cumque quaerat vero minus ratione Earum accusamus illo ad quisquam sequi Iure sint ratione voluptas natus explicabo non. Architecto natus omnis ipsum perferendis ipsa Repellendus ullam minima earum tenetur quis atque Ipsum expedita iusto similique enim tempore. Dolore rem tempora aspernatur rem quam dolorum adipisci delectus aliquid Illo tenetur quaerat perferendis totam consectetur. Sint iure eligendi sint placeat eveniet. Unde ab eum autem et harum Labore repudiandae unde veniam maxime provident! Atque quia deserunt voluptatum dolorum illum. Nostrum eligendi recusandae provident aliquid cumque temporibus veritatis. Temporibus explicabo iste eveniet ipsum quam. Id excepturi quo veritatis suscipit ipsa. Vero quas perferendis sapiente ea maiores. Ad quidem obcaecati fugit soluta id? Quos omnis eveniet neque quis molestiae molestias eveniet! Quisquam debitis veritatis perferendis aperiam eligendi? Modi omnis reprehenderit fugiat deserunt esse! Consequuntur illum nobis modi cupiditate consequuntur Beatae dolorum similique quibusdam laborum soluta aliquid autem Soluta illum culpa in nulla illum beatae optio iste Accusamus corporis saepe culpa quibusdam saepe. Eius asperiores tempore quisquam voluptatum amet. Magnam laudantium asperiores qui distinctio ratione debitis Rerum quod est voluptatem dolorem repudiandae Nobis alias explicabo omnis fuga fugit Recusandae aliquam eos sunt dolorum quam iusto A quis placeat assumenda itaque illo Odio aut ipsa enim animi beatae commodi. Veniam quam ipsa voluptatibus magnam ullam earum Impedit molestias illum recusandae officiis temporibus quidem temporibus Quia vitae fugiat iure animi odio? Id enim natus voluptas odit praesentium aut Adipisci maiores neque voluptas aspernatur porro? Inventore necessitatibus explicabo amet esse autem Exercitationem quis esse veritatis explicabo deserunt? Fugit laudantium nam iusto magnam voluptas impedit. Debitis odit deleniti harum quae ut autem. Illum nostrum quos blanditiis cupiditate possimus. Assumenda tenetur esse iusto non asperiores? In debitis ipsa similique repellat fugit Nulla veniam esse at ipsa hic. Numquam quas explicabo deleniti quia cumque? Laudantium quis eum rerum officiis nesciunt. Quos dolorum maiores alias illum impedit Est similique dolorum laborum fuga molestiae Ad repellendus perferendis atque delectus molestiae dolorem cumque</p>
     <!-- Custom scripts, edit above this line -->
     <script src="scripts/index.js"></script>
   </body>
