fixed some merge problems

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
         />
         <ul class="menu-nav">
           <li class="menu-nav__item">
-            <a class="menu-nav__link" href="">Dummy</a>
+            <a class="menu-nav__link" href="home.html">Home</a>
           </li>
           <li class="menu-nav__item">
-            <a class="menu-nav__link" href="">Dummy</a>
+            <a class="menu-nav__link" href="menu.html">Menu</a>
           </li>
           <li class="menu-nav__item">
             <a class="menu-nav__link" href="">Dummy</a>
