fixed nav in menu.html

--- a/src/menu.html
+++ b/src/menu.html
@@ -22,22 +22,37 @@
 
 <body>
 
-    <head>
-        <!--   <img srcset="" src="https://images.unsplash.com/photo-1571249104671-f5537fb3e137?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fGF2YXRhcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"alt=""> 
-        -->
-        <div class="menu-btn">
-            <span class="menu-btn__burger"></span>
-        </div>
-        <nav class="nav">
-            <ul class="menu-nav">
-                <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
-                <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
-                <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
-                <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
-                <li class="menu-nav__item"><a class="menu-nav__link" href="">Dummy</a></li>
-            </ul>
-        </nav>
-    </head>
+    <header>
+      <div class="menu-btn">
+        <span class="menu-btn__burger"></span>
+      </div>
+
+      <nav class="nav">
+        <img
+          class="nav__logo"
+          srcset=""
+          src="https://images.unsplash.com/photo-1571249104671-f5537fb3e137?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fGF2YXRhcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+          alt=""
+        />
+        <ul class="menu-nav">
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="index.html">Home</a>
+          </li>
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="menu.html">Menu</a>
+          </li>
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="">Dummy</a>
+          </li>
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="">Dummy</a>
+          </li>
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="">Dummy</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <section class="row_boxes">
         <div class="max_box">
