--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         />
         <ul class="menu-nav">
           <li class="menu-nav__item">
-            <a class="menu-nav__link" href="home.html">Home</a>
+            <a class="menu-nav__link" href="index.html">Home</a>
           </li>
           <li class="menu-nav__item">
             <a class="menu-nav__link" href="menu.html">Menu</a>
