--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body class="bg-dark">
-    <div class="chef"><span>Hello world</span></div>
-    <div class="chef2"></div>
+    <div class="chef1"><span>Hello world</span></div>
+    <div class="chef2"><span>Hello world</span></div>
+    <div class="chef3"><span>Hello world</span></div>
+    <div class="chef4"><span>Hello world</span></div>
     <div class="row">
       <div class="col-1"></div>
       <div class="col-10">
