minions appearing randomly

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,10 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body class="bg-dark">
-    <div class="chef"><span>Hello world</span></div>
-    <div class="chef2"></div>
+    <div class="chef1"><span>Hello world</span></div>
+    <div class="chef2"><span>Hello world</span></div>
+    <div class="chef3"><span>Hello world</span></div>
+    <div class="chef4"><span>Hello world</span></div>
     <div class="row">
       <div class="col-1"></div>
       <div class="col-10">
@@ -261,7 +263,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -283,7 +285,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -305,7 +307,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -327,7 +329,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -349,7 +351,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -371,7 +373,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -393,7 +395,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
@@ -415,7 +417,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a  class="owl__link"href="#">Add-cart</a>
+                <a class="owl__link" href="#">Add-cart</a>
               </div>
             </div>
           </section>
