--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
           <section>
             <div class="product">
               <picture>
-                <img src="image/banner2.png" alt="" />
+                <img src="/images/dishes/10854_chocolate_souffle.webp" alt="nicoise salad" />
               </picture>
               <div class="detail">
                 <p>
-                  <b>Product One</b><br />
+                  <b>Nicoise Salad</b><br />
                   <small>New arrival</small>
                 </p>
                 <samp>$45.00</samp>
@@ -268,29 +268,7 @@
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
-              </picture>
-              <div class="detail">
-                <p>
-                  <b>Product Two</b><br />
-                  <small>New arrival</small>
-                </p>
-                <samp>$45.00</samp>
-              </div>
-              <div class="button">
-                <p class="star">
-                  <strong>&star;</strong>
-                  <strong>&star;</strong>
-                  <strong>&star;</strong>
-                  <strong>&star;</strong>
-                  <strong>&star;</strong>
-                </p>
-                <a  class="owl__link"href="#">Add-cart</a>
-              </div>
-            </div>
-            <div class="product">
-              <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="/images/dishes/10651_salad_lyonnaisey.webp" alt="salad lyonnaisey" />
               </picture>
               <div class="detail">
                 <p>
@@ -312,7 +290,7 @@
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/28555_nicoise_salad2.webp" alt="chocolate souffle" />
               </picture>
               <div class="detail">
                 <p>
@@ -334,7 +312,7 @@
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/11137_spiked_apple_galette.webp" alt="spiked apple galette" />
               </picture>
               <div class="detail">
                 <p>
@@ -356,7 +334,7 @@
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/13500_brandied_pear_tart.webp" alt="brandied pear tart" />
               </picture>
               <div class="detail">
                 <p>
@@ -378,7 +356,7 @@
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/13696_smashed_potatoes.webp" alt="smashed potatoes" />
               </picture>
               <div class="detail">
                 <p>
@@ -400,7 +378,29 @@
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/27893_coq_au_vin.webp" alt=" coq au vin" />
+              </picture>
+              <div class="detail">
+                <p>
+                  <b>Product Two</b><br />
+                  <small>New arrival</small>
+                </p>
+                <samp>$45.00</samp>
+              </div>
+              <div class="button">
+                <p class="star">
+                  <strong>&star;</strong>
+                  <strong>&star;</strong>
+                  <strong>&star;</strong>
+                  <strong>&star;</strong>
+                  <strong>&star;</strong>
+                </p>
+                <a  class="owl__link"href="#">Add-cart</a>
+              </div>
+            </div>
+            <div class="product">
+              <picture>
+                <img src="images/dishes/28273_asparagus_mimosa.webp" alt="asparagus mimosa" />
               </picture>
               <div class="detail">
                 <p>
@@ -437,5 +437,20 @@
     ></script>
     <script src="./scripts/main.js"></script>
     <script src="./scripts/index.js"></script>
+    
+    <script>
+    var folder = "./images/dishes/";
+
+    $.ajax({
+        url : folder,
+        success: function (data) {
+            $(data).find("a").attr("href", function (i, val) {
+                if( val.match(/\.(jpe?g|png|gif)$/) ) { 
+                    $("body").append( "<img src='"+ folder + val +"'>" );
+                } 
+            });
+        }
+    });
+</script>
   </body>
 </html>
