--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
     <title>Le Frog</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/style.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,35 +24,7 @@
 <body>
 
     <header>
-      <div class="menu-btn">
-        <span class="menu-btn__burger"></span>
-      </div>
-
-      <nav class="nav">
-        <img
-          class="nav__logo"
-          srcset=""
-          src="https://images.unsplash.com/photo-1571249104671-f5537fb3e137?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDF8fGF2YXRhcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-          alt=""
-        />
-        <ul class="menu-nav">
-          <li class="menu-nav__item">
-            <a class="menu-nav__link" href="index.html">Home</a>
-          </li>
-          <li class="menu-nav__item">
-            <a class="menu-nav__link" href="menu.html">Menu</a>
-          </li>
-          <li class="menu-nav__item">
-            <a class="menu-nav__link" href="">Dummy</a>
-          </li>
-          <li class="menu-nav__item">
-            <a class="menu-nav__link" href="">Dummy</a>
-          </li>
-          <li class="menu-nav__item">
-            <a class="menu-nav__link" href="">Dummy</a>
-          </li>
-        </ul>
-      </nav>
+    
     </header>
 
     <section class="row_boxes">
