--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
 
             <div class="col_table one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Eventail de tomates</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -43,7 +43,7 @@
             </div>
             <div class="col_table one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Ris de veau</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -52,7 +52,7 @@
             </div>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Macedonie de légumes</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -61,7 +61,7 @@
             </div>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Crazy a frog</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -70,7 +70,7 @@
             </div>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Filet de lazy</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -83,7 +83,7 @@
             <h2 class="old_text_h sm-5">plat</h2>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Desosse de pied</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -92,7 +92,7 @@
             </div>
             <div class="col_table   one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Pied de sosse</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -101,7 +101,7 @@
             </div>
             <div class="col_table   one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Menu three</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -110,7 +110,7 @@
             </div>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Prueneux</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -119,7 +119,7 @@
             </div>
             <div class="col_table   one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Noprueneux de piet</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -132,7 +132,7 @@
 
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Cakes` armagnac</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -141,7 +141,7 @@
             </div>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Profiterolle</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -150,7 +150,7 @@
             </div>
             <div class="col_table   one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>No rolle de profi</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -159,7 +159,7 @@
             </div>
             <div class="col_table   one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>No rolle no profi</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
@@ -168,7 +168,7 @@
             </div>
             <div class="col_table  one">
                 <!-- <img src="./images/breakfast2.jpg" alt="breakfast image"> -->
-                <div class="text">
+                <div class="menu_text">
                     <h3>Gratin ananas</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit............. €15
