--- a/delivery.html
+++ b/delivery.html
@@ -92,6 +92,7 @@
     <div class="delivery_main">
         <div class="head_text">
             <h3>Was never easier and faster</h3>
+            <h4>No form, no call, just send a code with love</h4>
         </div>
     
     <section class="delivery_page delivery_page-center">
