--- a/menu.html
+++ b/menu.html
@@ -272,10 +272,13 @@
                     </p>
                 </div>
             </div>
+           
         </div>
+        <div class="barokklines"></div>
 
-  
 </div>
+</div>
+
 
     <!-- <div class="text">
                 <span class="processing-label">Processing...</span>
