--- a/src/index.html
+++ b/src/index.html
@@ -246,11 +246,11 @@
           <section>
             <div class="product">
               <picture>
-                <img src="image/banner2.png" alt="" />
+                <img src="/images/dishes/10854_chocolate_souffle.webp" alt="nicoise salad" />
               </picture>
               <div class="detail">
                 <p>
-                  <b>Product One</b><br />
+                  <b>Nicoise Salad</b><br />
                   <small>New arrival</small>
                 </p>
                 <samp>$45.00</samp>
@@ -263,12 +263,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="/images/dishes/10651_salad_lyonnaisey.webp" alt="salad lyonnaisey" />
               </picture>
               <div class="detail">
                 <p>
@@ -285,12 +285,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/28555_nicoise_salad2.webp" alt="chocolate souffle" />
               </picture>
               <div class="detail">
                 <p>
@@ -307,12 +307,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/11137_spiked_apple_galette.webp" alt="spiked apple galette" />
               </picture>
               <div class="detail">
                 <p>
@@ -329,12 +329,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/13500_brandied_pear_tart.webp" alt="brandied pear tart" />
               </picture>
               <div class="detail">
                 <p>
@@ -351,12 +351,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/13696_smashed_potatoes.webp" alt="smashed potatoes" />
               </picture>
               <div class="detail">
                 <p>
@@ -373,12 +373,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/27893_coq_au_vin.webp" alt=" coq au vin" />
               </picture>
               <div class="detail">
                 <p>
@@ -395,12 +395,12 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
             <div class="product">
               <picture>
-                <img src="image/banner1.png" alt="" />
+                <img src="images/dishes/28273_asparagus_mimosa.webp" alt="asparagus mimosa" />
               </picture>
               <div class="detail">
                 <p>
@@ -417,7 +417,7 @@
                   <strong>&star;</strong>
                   <strong>&star;</strong>
                 </p>
-                <a class="owl__link" href="#">Add-cart</a>
+                <a  class="owl__link"href="#">Add-cart</a>
               </div>
             </div>
           </section>
